--- a/website/app/application/core/components/properties/partials/property-fraction.html
+++ b/website/app/application/core/components/properties/partials/property-fraction.html
@@ -3,6 +3,7 @@
         {{::property.name}}
         <i ng-if="property.required" class="fa fa-fw fa-asterisk text-danger"></i>
     </label>
+
     <div class="col-xs-3">
         <input type="number"
                step="any"
@@ -10,9 +11,13 @@
                class="form-control"
                ng-required="property.required"
                ng-model="property.value.attribute1">
+        <div ng-messages="propertyForm.attribute1.$error" class="row errors">
+            <div ng-message="number">Not valid.</div>
+            <div ng-message="required">Required field.</div>
+        </div>
     </div>
     <div class="col-xs-1">
-         /
+        /
     </div>
     <div class="col-xs-3">
         <input type="number"
@@ -21,6 +26,10 @@
                name="attribute2"
                ng-required="property.required"
                ng-model="property.value.attribute2">
+        <div ng-messages="propertyForm.attribute2.$error" class="errors">
+            <div ng-message="number">Not Valid</div>
+            <div ng-message="required">Required field.</div>
+        </div>
     </div>
     <div class="col-xs-3">
         <div ng-if="property.units.length === 0">{{::property.unit}}</div>
@@ -36,16 +45,5 @@
         </div>
         <div class="help-block">{{::property.description}}</div>
     </div>
-    <br><div class="row">
-        <div ng-messages="propertyForm.attribute1.$error" class="errors">
-            <div ng-message="number"><u>Numerator: </Not a valid fraction.</div>
-            <div ng-message="required">Its a required field.</div>
-        </div>
-    </div>
-    <div class="row">
-        <div ng-messages="propertyForm.attribute2.$error" class="errors">
-            <div ng-message="number"><u>Denominator: </u> NOt a valid fraction.</div>
-            <div ng-message="required">Its a required field.</div>
-        </div>
-    </div>
+
 </div>
