--- a/website/app/application/core/components/properties/partials/property-number.html
+++ b/website/app/application/core/components/properties/partials/property-number.html
@@ -6,7 +6,10 @@
     <div class="col-xs-3">
         <input style="width: 100px;" type="number" name="numberInput" step="any" class="form-control"
                ng-required="property.required" ng-model="property.value">
-
+        <div ng-messages="propertyForm.numberInput.$error" class="row errors">
+            <div ng-message="number">Not a valid number</div>
+            <div ng-message="required">Required field.</div>
+        </div>
 
     </div>
     <div class="col-xs-3">
@@ -24,9 +27,6 @@
         <span class="help-block">{{::property.description}}</span>
     </div>
     <br><div class="row">
-    <div ng-messages="propertyForm.numberInput.$error" class="errors">
-        <div ng-message="number">Please enter number.</div>
-        <div ng-message="required">Its a required field.</div>
-    </div>
+
 </div>
 </div>
