--- a/website/app/application/core/components/properties/partials/property-fraction.html
+++ b/website/app/application/core/components/properties/partials/property-fraction.html
@@ -1,49 +1,62 @@
-<div ng-form="propertyForm">
-    <label class="col-xs-3 control-label">
-        {{::property.name}}
-        <i ng-if="property.required" class="fa fa-fw fa-asterisk text-danger"></i>
-    </label>
+<!--<div>-->
+    <!--<label class="col-xs-3 control-label">-->
+        <!--{{::property.name}}-->
+        <!--<i ng-if="property.required" class="fa fa-fw fa-asterisk text-danger"></i>-->
+    <!--</label>-->
 
-    <div class="col-xs-3">
-        <input type="number"
-               step="any"
-               name="attribute1"
-               class="form-control"
-               ng-required="property.required"
-               ng-model="property.value.attribute1">
-        <div ng-messages="propertyForm.attribute1.$error" class="row errors">
-            <div ng-message="number">Not valid.</div>
-            <div ng-message="required">Required field.</div>
-        </div>
-    </div>
-    <div class="col-xs-1">
-        /
-    </div>
-    <div class="col-xs-3">
-        <input type="number"
-               step="any"
-               class="form-control"
-               name="attribute2"
-               ng-required="property.required"
-               ng-model="property.value.attribute2">
-        <div ng-messages="propertyForm.attribute2.$error" class="errors">
-            <div ng-message="number">Not Valid</div>
-            <div ng-message="required">Required field.</div>
-        </div>
-    </div>
-    <div class="col-xs-3">
-        <div ng-if="property.units.length === 0">{{::property.unit}}</div>
-        <div ng-if="property.units.length !== 0"><br>
-            <select ng-model="property.unit" data-placeholder="Choose"
-                    class="form-control"
-                    ng-required="property.required">
-                <option value="{{choice}}"
-                        ng-repeat="choice in property.units">
+    <!--<div class="col-xs-3">-->
+        <!--<input type="number"-->
+               <!--step="any"-->
+               <!--class="form-control"-->
+               <!--ng-required="property.required"-->
+               <!--ng-model="property.value.attribute1">-->
+    <!--</div>-->
+    <!--<div class="col-xs-1">-->
+        <!--/-->
+    <!--</div>-->
+    <!--<div class="col-xs-3">-->
+        <!--<input type="number"-->
+               <!--step="any"-->
+               <!--class="form-control"-->
+               <!--ng-required="property.required"-->
+               <!--ng-model="property.value.attribute2">-->
+    <!--</div>-->
+    <!--<div class="col-xs-3">-->
+        <!--<div ng-if="property.units.length === 0">{{::property.unit}}</div>-->
+        <!--<div ng-if="property.units.length !== 0"><br>-->
+            <!--<select ng-model="property.unit" data-placeholder="Choose"-->
+                    <!--class="form-control"-->
+                    <!--ng-required="property.required">-->
+                <!--<option value="{{choice}}"-->
+                        <!--ng-repeat="choice in property.units">-->
+                    <!--{{ choice }}-->
+                <!--</option>-->
+            <!--</select>-->
+        <!--</div>-->
+        <!--<div class="help-block">{{::property.description}}</div>-->
+    <!--</div>-->
+
+<!--</div>-->
+
+<div class="row col-xs-9">
+    <h4>{{property.name}} :: {{property.description}}</h4>
+    <hr/>
+    <div class="row">Unit: <span ng-if="property.units.length === 0">{{::property.unit}}</span>
+        <span ng-if="property.units.length !== 0">
+            <select style="width: 200px;" ng-model="property.unit" data-placeholder="Choose"
+                    class="form-control" ng-required="property.required">
+                <option value="{{choice}}" ng-repeat="choice in property.units">
                     {{ choice }}
                 </option>
             </select>
-        </div>
-        <div class="help-block">{{::property.description}}</div>
+    </span>
     </div>
-
+</div>
+<div class="row">
+    <div class="col-xs-8">
+        <strong>Enter length measures </strong> <br>
+        <strong>(one entry per line) </strong><br>
+        type: {{property._type}}
+        <textarea ng-model="property.value" class="col-xs-12" rows="20"></textarea>
+    </div>
 </div>
