--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -9,7 +9,7 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     /* background-color: #e9e9ea; */
-    background-color: #f5f5f5;
+    background-color: #e9e9e9;
 }
 
 /* **************** Bootstrap overrides ******************* */
@@ -80,7 +80,6 @@ body {
 .fa.fa-download.space-right {
     padding-right: 5px;
 }
-
 
 /************End dataedit.html **************************/
 
@@ -234,7 +233,6 @@ ul.taskbar.nav li.projects-drop-down a:focus {
     top: -6px;
 }
 
-
 /*************************************This controls the height,  padding, and border radius and space between(margin bottom) of all input elements******/
 .form-horizontal
 .control-label {
@@ -359,9 +357,9 @@ h4, h5, h6 {
 }
 
 .taskbar.nav-tabs > li.active > a, .taskbar.nav-tabs > li.active > a:hover, .taskbar.nav-tabs > li.active > a:focus {
-    background-color: #F5F5F5;
+    background-color: #e9e9e9;
     color: #7990a3;
-    border-bottom: 1px solid #F5F5F5;
+    border-bottom: 1px solid #e9e9e9;
 }
 
 .home-item {
@@ -471,7 +469,6 @@ h4, h5, h6 {
     cursor: default;
 }
 
-
 a:hover,
 a:focus {
     text-decoration: underline;
@@ -495,12 +492,10 @@ hr {
     border-color: #d3d3d3;
 }
 
-
 /*************Forms for new layout******************/
 label {
     margin: 8px;
 }
-
 
 .badge-superscript-count {
     background-color: #ffffff;
@@ -754,7 +749,6 @@ header {
     padding-left: 40px;
 }
 
-
 .fc table {
     width: 100%;
 }
@@ -798,8 +792,16 @@ header {
     overflow-y: auto;
     transition: all 0.5s ease 0s;
     z-index: 1000;
-    background-color: white;
+    background-color: #f6f6f6;
     border: 1px solid #e7e7e7;
+    border-right: 1px solid #c3c3c3;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-right: 20px;
+}
+
+.no-padding {
+    padding: 0px;
 }
 
 .details-container.processes-container .navbar-default .navbar-nav > li.active > a {
@@ -859,8 +861,13 @@ header {
     z-index: 1000;
     background-color: white;
     border: 1px solid #e7e7e7;
-    padding-top: 30px;
+    padding-top: 10px;
     padding-left: 15px;
+    padding-right: 15px;
+}
+
+.details-main-content h3 {
+    margin-top: 8px;
 }
 
 .review {
@@ -884,6 +891,26 @@ header {
     font-weight: 400;
     text-transform: uppercase;
     line-height: 24px;
+}
+
+.heading-label {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.heading-label-lg {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
+.heading-label-lg hr {
+    margin-top: 22px;
+}
+
+hr.heading-label {
+    margin-bottom: 2px;
 }
 
 .mc-icon-image {
@@ -989,9 +1016,10 @@ header {
     color: white;
 }
 
-.dir-focus {
-    background: #AC91BA;
-}
+/*.ag-row-selected {*/
+/*background: #AC91BA;*/
+/*color: white;*/
+/*}*/
 
 .modal.fade .modal-dialog {
     transform: translate(0, 0);
@@ -1006,10 +1034,28 @@ header {
     border-color: white;
 }
 
-.errors{
+.errors {
     color: red;
 }
 
 .btn-inactive {
     background-color: grey;
+}
+
+.full-height {
+    margin-bottom: -900px;
+    padding-bottom: 900px;
+}
+
+/* Style Input Boxes */
+.underline-input input[type="text"] {
+    padding: 10px;
+    border: none;
+    border-bottom: solid 2px #c9c9c9;
+    transition: border 0.3s;
+}
+
+.underline-input input[type="text"]:focus,
+.underline-input input[type="text"].focus {
+    border-bottom: solid 2px #969696;
 }
