--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -12,7 +12,26 @@ body {
     background-color: #e9e9e9;
 }
 
-/* **************** Bootstrap overrides ******************* */
+/*** Basic styles for website ***/
+.btn {
+    text-transform: uppercase;
+    border-radius: 2px;
+    font-weight: 500;
+    color: white;
+}
+
+.btn-danger {
+    background-color: #E57373;
+    border-color: #E57373;
+}
+
+a {
+    color: #64b5f6;
+}
+
+a:hover, a:visited {
+    opacity: 0.7;
+}
 
 /***********Begin sideboard.html ***********/
 
