--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -8,6 +8,8 @@ body {
     /*font-size: 13px;*/
     overflow-y: scroll;
     overflow-x: hidden;
+    /*color: #5e5e5e;*/
+    color: #515151;
     /* background-color: #e9e9ea; */
     /*background-color: #e9e9e9;*/
 }
@@ -32,6 +34,20 @@ a {
 a:hover, a:visited {
     opacity: 0.7;
 }
+
+h1, h2 {
+    color: #515151;
+}
+
+h3, h4, h5, h6 {
+    color: #5e5e5e;
+}
+
+.text-emphasis {
+    color: #515151;
+}
+
+
 
 /***********Begin sideboard.html ***********/
 
@@ -106,10 +122,6 @@ a:hover, a:visited {
 
 .fa.fa-code-fork.space-right {
     padding-right: 3px;
-}
-
-span {
-    color: black;
 }
 
 .fa.fa-file.space-right {
