--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -11,7 +11,8 @@ body {
     /*color: #5e5e5e;*/
     color: #515151;
     /* background-color: #e9e9ea; */
-    /*background-color: #e9e9e9;*/
+    background-color: #e9e9e9;
+    /*background-color: #f5f5f5;*/
 }
 
 /*** Basic styles for website ***/
@@ -46,8 +47,6 @@ h3, h4, h5, h6 {
 .text-emphasis {
     color: #515151;
 }
-
-
 
 /***********Begin sideboard.html ***********/
 
@@ -197,7 +196,7 @@ ul.taskbar.nav li a:focus {
 ul.taskbar.nav li.projects-drop-down a:hover,
 ul.taskbar.nav li.projects-drop-down a:focus {
     font-weight: normal;
-    /* background-color: #f5f5f5; */
+     /*background-color: #f5f5f5;*/
     background-color: #45707D;
     color: #fff;
     border: 0;
@@ -387,10 +386,20 @@ h4, h5, h6 {
     border-radius: 0 0 0 0;
 }
 
-.taskbar.nav-tabs > li.active > a, .taskbar.nav-tabs > li.active > a:hover, .taskbar.nav-tabs > li.active > a:focus {
-    background-color: #e9e9e9;
+.taskbar.nav-tabs > li.active > a {
+    background-color: #f5f5f5;
     color: #7990a3;
-    border-bottom: 1px solid #e9e9e9;
+    border-bottom: 1px solid #f5f5f5;
+}
+
+.taskbar.nav-tabs > li.active > a:hover {
+    opacity: 1;
+    border-bottom: 1px solid #f5f5f5;
+}
+
+.taskbar.nav-tabs > li > a:hover {
+    opacity: 1;
+    border-bottom: 1px solid #f5f5f5;
 }
 
 .home-item {
@@ -824,7 +833,8 @@ header {
     transition: all 0.5s ease 0s;
     z-index: 1000;
     background-color: #f6f6f6;
-    border: 1px solid #e7e7e7;
+    /*border: 1px solid #e7e7e7;*/
+    border: 1px solid #c3c3c3;
     border-right: 1px solid #c3c3c3;
     padding-left: 20px;
     padding-top: 20px;
@@ -905,7 +915,7 @@ header {
     color: #FDB600;
 }
 
-.file {
+.file, .file-color {
     color: #9782be;;
 }
 
