--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body {
     font-size: 14px;
     font-family: roboto;
@@ -13,6 +17,7 @@ body {
     /* background-color: #e9e9ea; */
     background-color: #e9e9e9;
     /*background-color: #f5f5f5;*/
+    height: 100%;
 }
 
 /*** Basic styles for website ***/
@@ -827,8 +832,8 @@ header {
 }
 
 .details-sidebar {
-    min-height: 550px;
-    max-height: 600px; /*This should be true across all the detail pages*/
+    /*min-height: 550px;*/
+    /*max-height: 600px; /!*This should be true across all the detail pages*!/*/
     overflow-y: auto;
     transition: all 0.5s ease 0s;
     z-index: 1000;
@@ -839,6 +844,7 @@ header {
     padding-left: 20px;
     padding-top: 20px;
     padding-right: 20px;
+    min-height: 100%;
 }
 
 .no-padding {
@@ -896,7 +902,8 @@ header {
 }
 
 .details-main-content {
-    min-height: 550px;
+    /*min-height: 550px;*/
+    min-height: 100%;
     overflow-y: auto;
     transition: all 0.5s ease 0s;
     z-index: 1000;
@@ -1093,8 +1100,9 @@ hr.heading-label {
 }
 
 .full-height {
-    margin-bottom: -900px;
-    padding-bottom: 900px;
+    /*margin-bottom: -900px;*/
+    /*padding-bottom: 900px;*/
+    height: 100%;
 }
 
 /* Style Input Boxes */
@@ -1108,4 +1116,25 @@ hr.heading-label {
 .underline-input input[type="text"]:focus,
 .underline-input input[type="text"].focus {
     border-bottom: solid 2px #969696;
+}
+
+/* Try out flexbox to solve our problems with height */
+
+/*.row {*/
+    /*display: flex;*/
+/*}*/
+
+
+.box {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
+.box .row {
+    flex: 0 1 20px;
+}
+
+.box .row.content {
+    flex: 1 1 auto;
 }
