--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -103,6 +103,7 @@ h3, h4, h5, h6 {
   overflow-y: auto;
   max-height: 1200px;
   border: 1px solid #c3c3c3;
+  padding-left: 0; padding-right: 0;
 }
 
 /* Centering */
@@ -1167,14 +1168,33 @@ hr.heading-label {
   overflow-y: auto;
 }
 
-.list-group-item{
-  height: 80px;
+.card-side-bar .list-group-item{
+  height: 90px;
+  border-radius: 0;
 }
 
-.list-group-item:nth-of-type(odd){
+.card-side-bar .list-group-item:nth-of-type(odd){
   background: #ffffff !important;
 }
 
-.list-group-item:nth-of-type(even){
-  background: #bdbdbd !important;
+.card-side-bar .list-group-item:nth-of-type(even){
+  background: #efefef !important;
+}
+.card-side-bar .list-group-item:first-child{
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.card-side-bar .list-group-item:last-child {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.card-side-bar .list-group-item.active{
+  border: 2px solid #8c8c8c;
+  color: black;
+  background-color: transparent;
+}
+
+.card-side-bar .space-left{
+  padding-left: 10px;
 }
